# m3-2024-spring-catalog-vector-search

./: .gitignore  README.md  pyproject.toml
src/_2024_spring_m3_rag_llm/: __init__.py
src/chat/: app.py
src/embedding/: main.py
src/scraping/: main.py
