[project]
name = "2024_spring_m3_rag_llm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nijigen-plot"}
]

readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "chromadb==0.4.24",
    "langchain>=0.1.16",
    "langchain-openai>=0.1.3",
    "beautifulsoup4>=4.12.3",
    "streamlit>=1.33.0",
    "jq>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_2024_spring_m3_rag_llm"]
